# windows

./: LICENSE
choco/: install.ps1
shared source/sscli20/: buildall  buildall.cmd  configure  configure.in  env.bat  env.core.pl  env.csh  env.sh  licensed_file_list.txt  makefile  makefile.common.in  makefile.in  mswin32.startup.pl  ndpmk.inc  readfirst.html  win.env.bat
shared source/sscli20/VS2010sscli20/sscli20/: mswin32.startup.pl  vs2010README.txt  win.env.bat
shared source/sscli20/binaries.x86chk.rotor/: ISymWrapper.ildb  Microsoft.JScript.ildb  Microsoft.Vsa.ildb  System.Configuration.ildb  System.Data.SqlXml.ildb  System.Runtime.Remoting.ildb  System.Runtime.Serialization.Formatters.Soap.ildb  System.Xml.ildb  System.ildb  alink.satellite  caspol.ildb  clix.satellite  csc.rsp  cscomp.satellite  empty.res  gacutil.satellite  jsc.ildb  mscorrc.satellite  sosdocs.txt
shared source/sscli20/binaries.x86chk.rotor/config/: enterprisesec.config.cch
shared source/sscli20/binaries.x86chk.rotor/dump/: System.ildb  System.satellite  apithreadstress.h  arraylist.h  atlcom.h  atlwin.h  classfac.h  clrinternal.h  clrinternal.idl  clrntexception.h  compatibilityflags.h  compatibilityflagsdef.h  contract.h  cordebug.idl  corexcep.h  corffi.idl  corimage.h  corperme.h  corpermp.h  corpriv.h  corprof.idl  corpub.idl  cortypeinfo.h  crstlevels.h  daccess.i  dacprivate.h  dacvars.h  dbgalloc.h  debugmacrosext.h  debugreturn.h  declsec.h  dlwrap.h  eexcp.h  enc.h  eventtrace.h  ex.h  fcntl.h  fusion.idl  fusionpriv.idl  fusionsink.h  (+53 more)
shared source/sscli20/binaries.x86chk.rotor/int_tools/: DacTableGen.ildb  MergeAttributes.ildb
shared source/sscli20/binaries.x86chk.rotor/rotor/: strongname.ini
shared source/sscli20/clr/: dac.mk  project.mk
shared source/sscli20/clr/src/: dirs
shared source/sscli20/csharp/: dirs
shared source/sscli20/csharp/alink/: dirs
shared source/sscli20/csharp/inc/: allnodes.h  array.h  atlarrayqsort.h  attrloc.h  clsspecnames.h  compat.h  compilerlib.h  compres.h  consoleargs.cpp  consoleargs.h  consoleoutput.cpp  consoleoutput.h  constval.h  cscommon.h  dbgout.h  enum.h  errorids.h  errors.h  events.h  file_can.h  iheapallocator.h  list.h  locks.h  mempool.cpp  mempool.h  msgsids.h  name.h  nodekind.h  nodes.h  objptr.h  ops.h  pch.h  posdata.h  ppkwds.h  predefname.h  predeftype.h  satellite.h  sources  specnames.h  strbuild.h  (+17 more)
shared source/sscli20/csharp/scc/: cmdoptdef.h  compilerhost.cpp  compilerhost.h  dirs  resource.h  scc.cpp  scc.h  scc.rc  sources  sources.inc  stdafx.cpp  stdafx.h
shared source/sscli20/csharp/sccomp/: alloc.cpp  alloc.h  attrtypes.h  basenodelookupcache.h  bitset.cpp  bitset.h  clsdrec.cpp  clsdrec.h  common.h  compiler.cpp  compiler.h  complus.cpp  controller.cpp  controller.h  cscmgd.cpp  cscmgd.h  dirs  dllmain.cpp  dumpnode.h  emitter.cpp  emitter.h  error.cpp  error.h  errorsuppression.h  exprkind.h  exprlist.h  exprnodes.h  factory.cpp  factory.h  fileiter.h  fncbind.cpp  fncbind.h  fncpbind.cpp  hashtab.h  ilgen.cpp  ilgen.h  import.cpp  import.h  inputset.cpp  inputset.h  (+52 more)
shared source/sscli20/csharp/shared/: checksum.cpp  file.cpp  locks.cpp  mempool_wrap.cpp  node.cpp  pch.cpp  pch.h  positiondata.cpp  satellite.cpp  sources  strbuild.cpp  table.cpp
shared source/sscli20/csharp/unilib/: pch.h  sources  ucase.cpp  ucasemt.cpp  ugentab.cpp  uniapi.cpp  utable.cpp  utf.cpp
shared source/sscli20/docs/: glossary.html  index.html  map.html  relnotes.html  rotor.css  testing_overview.html
shared source/sscli20/docs/buildtools/: binplace.html  buildall.html  building_sscli.html  buildtools_index.html  buildutility.html  env.html  internalresgen.html  nmake.html  resourcecompiler.html
shared source/sscli20/docs/compilers/: compilers_index.html  csharp.html  jsc.html
shared source/sscli20/docs/debugging/: debugging_index.html  debugging_overview.html  sos.html
shared source/sscli20/docs/ecma/: ecma_index.html
shared source/sscli20/docs/techinfo/: encodings.html  logging.html  native_managed_interop.html  pal_guide.html  resfilefmt.html  stackframe.html  techinfo_index.html
shared source/sscli20/docs/tools/: al.html  caspol.html  clix.html  cordbg.html  gacutil.html  genpalunitable.html  ilasm.html  ildasm.html  ildbconv.html  ildbdump.html  metainfo.html  peverify.html  resgen.html  sn.html  storeadm.html  tools_index.html
shared source/sscli20/env/rotor_x86/: coffbase.txt
shared source/sscli20/fx/: project.mk
shared source/sscli20/fx/src/: dirs
shared source/sscli20/jscript/: dirs  jscript.inc
shared source/sscli20/jscript/engine/: activationobject.cs  activexobjectconstructor.cs  addressof.cs  argumentsobject.cs  arrayconstructor.cs  arrayenumerator.cs  arrayliteral.cs  arrayobject.cs  arrayprototype.cs  arraywrapper.cs  assemblyattributes.cs  assemblycustomattributelist.cs  assign.cs  ast.cs  astlist.cs  basevsa.cs  binaryop.cs  binding.cs  bitwisebinary.cs  bitwisebinaryassign.cs  block.cs  blockscope.cs  booleanconstructor.cs  booleanobject.cs  booleanprototype.cs  break.cs  breakoutoffinally.cs  builtinfunction.cs  call.cs  callableexpression.cs  callcontext.cs  class.cs  classscope.cs  closure.cs  clscompliancespec.cs  cmdlineerror.cs  cmdlineexception.cs  cmdlineoptionparser.cs  comma.cs  compilerglobals.cs  (+210 more)
shared source/sscli20/jscript/jsc/: jsc.cs  jsc.rc  jsc.txt  makefile.inc  sources
shared source/sscli20/jscript/vsa/: obsolete.cs  sources  vsa7.cs
shared source/sscli20/pal/inc/: pal_assert.h  pal_endian.h  pal_error.h  pal_mstypes.h  strsafe.h
shared source/sscli20/pal/unix/: config.h.in  configure  configure.in  makefile  makefile.common.in  makefile.in
shared source/sscli20/pal/win32/: binplace.cmd  build.cmd  cpp_exceptions.cpp  default.mac  eventlog.mc  exception.c  make.cmd  makefile.inc  perftrace.c  perftrace.h  rotor_pal.rc  rotor_pal.src  sources  verifythread.c  win32pal.c  win32pal.h
shared source/sscli20/palrt/: dirs
shared source/sscli20/samples/: dirs  project.mk  samples_index.html
shared source/sscli20/tests/: cas  cas.bat  pvtrun.pl  rdirs  rrun.pl
(+35397 files in other folders)
